5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1715_3064.log
== TEST (2019-05-02 16:04:41) 
-- CODE:
nome = input("(AAMEUL)","(HETHRADIAH)","(RAKSHASA)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = input("(AAMEUL)","(HETHRADIAH)","(RAKSHASA)")
TypeError: input expected at most 1 arguments, got 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:04:47) 
-- CODE:
nome = input("(AAMEUL)","(HETHRADIAH)","(RAKSHASA)")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nome = input("(AAMEUL)","(HETHRADIAH)","(RAKSHASA)")
TypeError: input expected at most 1 arguments, got 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:07:44) 
-- CODE:
nome = input("Nome da cabeca: ")
Valor = int(input("Valor do dado: "))
print(nome)

-- EXECUTION TIME:
0.169824
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
AAMEUL
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
RAKSHASA
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
AAMEUL
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:07:45) 
-- CODE:
nome = input("Nome da cabeca: ")
Valor = int(input("Valor do dado: "))
print(nome)

-- OUTPUT:
AAMEUL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:09:55) 
-- CODE:
nome = input("Nome da cabeca: ")
Valor = int(input("Valor do dado: "))
print(nome)

if()

-- ERROR:
File "XXXX", line 5
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:12:09) 
-- CODE:
nome = input("Nome da cabeca: ")
Valor = int(input("Valor do dado: "))
print(Valor)
print()

if(nome == "AAMEUL"):
	print()

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:13:53) 
-- CODE:
nome = input("Nome da cabeca: ")
Valor = int(input("Valor do dado: "))
if(Valor >= 1 and Valor <= 10):
	print("Entrada invalida")

if(nome == "AAMEUL"):
	print()

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:03) 
-- CODE:
nome = input("Nome da cabeca: ")
Valor = int(input("Valor do dado: "))
if(Valor >= 1 and Valor <= 10):
	print("Entrada invalida")

if(nome == "AAMEUL"):
	print()

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:31) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor >= 1 and Valor <= 10):
	print("Entrada invalida")

if(nome == "AAMEUL"):
	print()

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:43) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor >= 1 and Valor <= 10):
	print("Entrada invalida")

if(nome == "AAMEUL"):
	print()

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:20) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")
if (nome == "AAMEUL"):
	print()



-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:32) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")
if (nome == "AAMEUL"):
	print()



-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:58) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")
if (nome == "AAMEUL"):
	print()



-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:01) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")
if (nome == "AAMEUL"):
	


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:03) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")
if (nome == "AAMEUL"):
	


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:17) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")

	


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:36) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if(Valor < 1 and Valor > 10):
	print("Entrada invalida")

	


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:35) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if (Valor < 1 and Valor > 10):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:25:49) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if (Valor < 1 and Valor > 10):
	print("Entrada invalida")
-- EXECUTION TIME:
0.169607
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:

-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:54) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor = int(input("Valor do dado: "))
if (Valor < 1 and Valor > 10):
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:29:16) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor < 1 and Valor > 10):
	print("Entrada invalida")
if(Valor1 + Valor2 >= 2) or(Valor1 + Valor2 <= 20):
	print(nome)
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (Valor < 1 and Valor > 10):
NameError: name 'Valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:30:35) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 < 1 and Valor1 + Valor2 > 10):
	print("Entrada invalida")
if(Valor1 + Valor2 >= 2) or(Valor1 + Valor2 <= 20):
	print(nome)
	print()
-- OUTPUT:
AAMEUL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:31:22) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 < 1 and Valor1 + Valor2 > 10):
	print("Entrada invalida")
if(Valor1 + Valor2 >= 2) or(Valor1 + Valor2 <= 20):
	print(nome)
	print(Valor1)
	print(Valor2)
-- OUTPUT:
AAMEUL
23
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:32:00) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 < 1 and Valor1 + Valor2 > 10):
	print("Entrada invalida")
if(Valor1 + Valor2 >= 2) or(Valor1 + Valor2 <= 20):
	print(nome)
	print(Valor1 + Valor2)
	
-- OUTPUT:
AAMEUL
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:33:30) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 < 1 and Valor1 + Valor2 > 10):
	print("Entrada invalida")
if(nome == "AAMEUL"):
if(Valor1 + Valor2 >= 2) or(Valor1 + Valor2 <= 20):
	print(nome)
	print(Valor1 + Valor2)
	
-- ERROR:
File "XXXX", line 7
    if(Valor1 + Valor2 >= 2) or(Valor1 + Valor2 <= 20):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:34:20) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 < 1 and Valor1 + Valor2 > 10):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor)
	

	
-- ERROR:
File "XXXX", line 7
    if(Valor)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:17) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print()
	

	
-- ERROR:
File "XXXX", line 7
    if(Valor)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:36:26) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print()
	

	
-- ERROR:
File "XXXX", line 7
    if(Valor)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:37:54) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:38:05) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:50) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10):
		
		
	

	
-- ERROR:
File "XXXX", line 11
    print(Valor1 + Valor2 + 10):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:40:55) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10):		
		
	

	
-- ERROR:
File "XXXX", line 11
    print(Valor1 + Valor2 + 10):		
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:00) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:41:16) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:43:22) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 * 2)
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:03) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 * (2))
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:32) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2)*2
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:44:45) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2)*2
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:13) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:45:24) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		
	

	
-- EXECUTION TIME:
0.188424
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:28) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:49) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		else("Entrada invalida")
		
	

	
-- ERROR:
File "XXXX", line 15
    else("Entrada invalida")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:45:54) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:46:01) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		
		
	

	
-- EXECUTION TIME:
0.208831
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:03) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 3)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:16) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2)*(2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:46:44) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:15) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2)* 2
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:47:23) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 8)
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2 + 10)
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(Valor1 + Valor2) * 2
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:14) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2)) * 2
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:22) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2)) * 2
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:48:50) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2)) 
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:03) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 * 2)) 
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:13) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:21) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- EXECUTION TIME:
0.174489
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:22) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:24) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- EXECUTION TIME:
0.219764
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:24) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:36) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:37) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- EXECUTION TIME:
0.156652
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:38) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:49:39) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- EXECUTION TIME:
0.187533
-- TEST CASE 1:
---- input:
AAMEUL
23
1
---- correct output:
Entrada invalida
---- user output:
32
-- TEST CASE 2:
---- input:
RAKSHASA
1
2
---- correct output:
13
---- user output:
13
-- TEST CASE 3:
---- input:
AAMEUL
2
3
---- correct output:
13
---- user output:
13
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:49:40) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:12:25) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:12:44) 
-- CODE:
nome = input("AAMEUL OU HETHRADIAH OU RAKSHASA?")
Valor1 = int(input("Valor do dado 1: "))
Valor2 = int(input("Valor do dado 2: "))
if (Valor1 + Valor2 <= 1):
	print("Entrada invalida")
if(nome == "AAMEUL"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 8))
elif(nome == "RAKSHASA"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2 + 10))
elif(nome == "HETHRADIAH"):
	if(Valor1 + Valor2 >= 2)or(Valor1 + Valor2 <= 20):
		print(int(Valor1 + Valor2) * 2)
		
		
	

	
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
